# ocr

./: .env.example  .gitignore  .pre-commit-config.yaml  CONFIG_EXAMPLES.md  QUICKSTART.md  RCLONE_GUIDE.md  README.md  TIMED_OUTPUT_GUIDE.md  TROUBLESHOOTING.md  pyproject.toml
ocr/: __init__.py  __main__.py  models.py  text_cleanup.py  text_extractor.py  vision_client.py
ocr/input/: __init__.py  _base.py  directory.py  google_drive.py  google_drive_directory.py  pdf.py
ocr/output/: __init__.py  _base.py  combined.py  google_drive.py  rclone.py  separate.py  timed.py  timed_split.py  timed_viewer.py
ocr/output/duration/: __init__.py  _base.py  default.py  frequency.py  transformer.py
ocr/output/local_ouptup/: __init__.py  combined.py  separate.py
ocr/output/transfomations/: __init__.py  duplicate_long_words.py  join_words_moving_center.py  llm_cleanup.py  split_long_words.py
ocr/output/transfomations/llm_cleanup/: llm_cleanup.py
ocr/output/transfomations/llm_cleanup/provider/: __init__.py  _base.py  anthropic.py  message.py  openai.py
ocr/output/transfomations/tests/: test_join_words_moving_center.py  test_split_long_words.py
ocr/services/: image_finder.py  text_extractor.py
ocr/services/writers/: __init__.py  _writer.py  combined_writer.py  separate_writer.py
ocr/transfomations/: __init__.py  duplicate_long_words.py  join_words_moving_center.py  split_long_words.py  transformation.py
ocr/transfomations/llm_cleanup/: __init__.py  llm_cleanup.py
ocr/transfomations/llm_cleanup/provider/: __init__.py  _base.py  anthropic.py  message.py  openai.py
ocr/transfomations/tests/: test_join_words_moving_center.py  test_split_long_words.py
scripts/: timed_viewer_runner.py
stubs/google/oauth2/: service_account.pyi
tests/duration/: test_frequency.py
