[project]
name = "ocr"
version = "0.1.0"
description = "Runs OCR of a book pages"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=3.7.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.12.0",
    "google-cloud-vision>=3.8.0",
    "mypy>=1.13.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr"]

[dependency-groups]
frequency-duration-calculator = [
    "wordfreq>=3.1.1",
]
google-drive = [
    "google-api-python-client>=2.188.0",
]
llm-cleanup = []
llm-cleanup-anthropic = [
    "anthropic>=0.76.0",
]
llm-cleanup-openai = [
    "openai>=2.15.0",
]
pdf = [
    "pdf2image>=1.17.0",
]
sylable-splitting = [
    "pyphen>=0.17.2",
]
transformer-duration-calculator = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
transformers = [
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs"
